resource-manifests/istio/circuitbreaking/sa-logic-subsets-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sa-logic
spec:
  host: sa-logic    # 1
  subsets:
  - name: v1        # 2
    labels:
      version: v1   # 3
  - name: v2
    labels:
      version: v2  
    trafficPolicy:
      outlierDetection:
          consecutiveErrors: 1
          interval: 1m
          baseEjectionTime: 30m
          maxEjectionPercent: 100
